--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*-----------------resate page-----------------*/
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -6457,8 +6456,7 @@ a.ui-button:active,
   font-style: normal; }
 
 html {
-  font-size: 0.6945vw;
-  font-size: 8px; }
+  font-size: 0.6945vw; }
 
 body {
   font-family: 'Noto Sans', sans-serif;
@@ -7067,56 +7065,6 @@ body .ui-menu .ui-state-active {
       width: 100%; }
       .items-catalog .sharing .pluso > div, .items-catalog .sharing .pluso .pluso-wrap {
         width: 100%; }
-    .items-catalog .sharing .drob-sharing {
-      width: 115.8%;
-      position: absolute;
-      top: calc(100% + 0.9rem);
-      left: 0;
-      background: #FFFFFF;
-      box-shadow: 0px 4px 20px rgba(36, 102, 161, 0.5);
-      border-radius: 10px;
-      z-index: 5;
-      padding: 0.9rem 0.9rem 0.1rem;
-      display: none; }
-      .items-catalog .sharing .drob-sharing:before {
-        content: '';
-        position: absolute;
-        top: -1.2rem;
-        left: calc(50% - 0.6rem);
-        border: 0.6rem solid transparent;
-        border-bottom: 0.6rem solid #fff; }
-      .items-catalog .sharing .drob-sharing a {
-        width: 100%;
-        height: auto;
-        padding: 1.4rem 3.7rem;
-        border-radius: 3px;
-        background: none;
-        background-repeat: no-repeat;
-        display: flex;
-        align-items: center;
-        margin-bottom: 0.7rem; }
-        .items-catalog .sharing .drob-sharing a.pluso-facebook {
-          background-color: #2C54A9;
-          background-image: url(../img/facebook.png);
-          background-size: 1.3rem auto;
-          background-position: 1.2rem bottom; }
-          .items-catalog .sharing .drob-sharing a.pluso-facebook:before {
-            content: 'Facebook';
-            font-size: 12px;
-            color: #fff;
-            display: block; }
-        .items-catalog .sharing .drob-sharing a.pluso-vkontakte {
-          background-color: #5180B8;
-          background-image: url(../img/vk.png);
-          background-size: 1.8rem auto;
-          background-position: 1.2rem 50%; }
-          .items-catalog .sharing .drob-sharing a.pluso-vkontakte:before {
-            content: 'Вконтакте';
-            font-size: 12px;
-            color: #fff;
-            display: block; }
-    .items-catalog .sharing .pluso-more {
-      display: none !important; }
   .items-catalog ul.ul-list {
     margin-bottom: 2.2rem; }
     .items-catalog ul.ul-list li {
@@ -7269,7 +7217,81 @@ footer {
 .modal-window {
   -webkit-overflow-scrolling: touch;
   -moz-overflow-scrolling: touch;
-  overflow-scrolling: touch; }
+  overflow-scrolling: touch;
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 99;
+  background: rgba(0, 0, 0, 0.8);
+  text-align: center;
+  display: none; }
+  .modal-window:before {
+    content: "";
+    display: inline-block;
+    min-height: inherit;
+    height: 100%;
+    vertical-align: middle;
+    text-align: center; }
+  .modal-window .window {
+    width: calc(100% - 10px);
+    max-width: 500px;
+    background: #fff;
+    display: inline-block;
+    vertical-align: middle;
+    padding: 4rem 2rem;
+    position: relative;
+    border-radius: 3px; }
+    .modal-window .window .close {
+      width: 1.9rem;
+      height: 1.9rem;
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
+      cursor: pointer;
+      transition: opacity 0.3s; }
+      .modal-window .window .close:hover {
+        opacity: 0.8; }
+      .modal-window .window .close:before, .modal-window .window .close:after {
+        content: '';
+        width: 100%;
+        height: 2px;
+        display: block;
+        position: absolute;
+        top: calc(50% - 1px);
+        left: 0;
+        background: #357BBA; }
+      .modal-window .window .close:before {
+        transform: rotate(45deg); }
+      .modal-window .window .close:after {
+        transform: rotate(-45deg); }
+    .modal-window .window h2, .modal-window .window .h2 {
+      font-size: 2rem;
+      letter-spacing: 0;
+      font-family: "PT Mono"; }
+
+.sharing-wr .pluso-more {
+  display: none !important; }
+
+.sharing-wr .pluso > div {
+  width: 100%; }
+
+.sharing-wr .pluso-wrap a {
+  background-position: 50% !important;
+  width: 3.5rem !important;
+  height: 3.5rem !important;
+  border-radius: 50%;
+  margin: 0 0.5rem !important; }
+  .sharing-wr .pluso-wrap a.pluso-facebook {
+    background-color: #2C54A9;
+    background-image: url(../img/facebook.png);
+    background-size: 30% auto; }
+  .sharing-wr .pluso-wrap a.pluso-vkontakte {
+    background-color: #5180B8;
+    background-image: url(../img/vk.png);
+    background-size: 54% auto; }
 
 .button input, .button button {
   -webkit-appearance: none; }
