--- a/css/style.css
+++ b/css/style.css
@@ -6969,6 +6969,7 @@ body .ui-menu .ui-state-active {
       display: none; }
   .items-catalog .wr-content {
     width: 100%;
+    min-height: 100%;
     background: #fff;
     padding-bottom: 2.6rem;
     box-shadow: 0px 4px 20px rgba(36, 102, 161, 0.08);
@@ -7120,19 +7121,49 @@ body .ui-menu .ui-state-active {
   margin: 0.6rem 0 1.6rem 0;
   padding-left: 1rem; }
   .reiting-block ul.ul-reiting {
-    margin-left: -0.2rem; }
+    margin-left: 0.2rem;
+    position: relative;
+    top: -0.1rem; }
 
 ul.ul-reiting {
   display: flex; }
   ul.ul-reiting li {
-    width: 1.7rem;
-    height: 1.6rem;
-    background-image: url(../img/start.svg);
-    background-repeat: no-repeat;
-    background-size: contain;
-    margin-left: 0.4rem; }
-    ul.ul-reiting li.disabled {
+    display: block; }
+    ul.ul-reiting li button {
+      width: 1.7rem;
+      height: 1.6rem;
+      background-image: url(../img/start.svg);
+      background-repeat: no-repeat;
+      background-size: contain;
+      margin-left: 0.4rem;
+      background-color: transparent;
+      border: none;
+      display: block;
+      cursor: pointer;
+      position: relative; }
+    ul.ul-reiting li.disabled button {
       background-image: url(../img/disabled-start.svg); }
+    ul.ul-reiting li.h_25 button {
+      background-image: url(../img/start-025.svg); }
+    ul.ul-reiting li.h_5 button {
+      background-image: url(../img/start-05.svg); }
+    ul.ul-reiting li.h_75 button {
+      background-image: url(../img/start-075.svg); }
+  ul.ul-reiting.hover-reiting li button {
+    background-image: url(../img/disabled-start.svg) !important; }
+  ul.ul-reiting.hover-reiting li.active button {
+    background-image: url(../img/start-hover.svg) !important; }
+  ul.ul-reiting.active li button {
+    background-image: url(../img/start-hover.svg) !important;
+    cursor: default; }
+  ul.ul-reiting.active li.disabled button {
+    background-image: url(../img/disabled-start.svg) !important; }
+  ul.ul-reiting.active li.h_25 button {
+    background-image: url(../img/start-025-hover.svg) !important; }
+  ul.ul-reiting.active li.h_5 button {
+    background-image: url(../img/start-05-hover.svg) !important; }
+  ul.ul-reiting.active li.h_75 button {
+    background-image: url(../img/start-075-hover.svg) !important; }
 
 footer {
   background: url(../img/circle-5.svg) left bottom no-repeat, url(../img/circle-6.svg) right top no-repeat #357BBA;
@@ -7292,6 +7323,24 @@ footer {
     background-color: #5180B8;
     background-image: url(../img/vk.png);
     background-size: 54% auto; }
+
+.modal-error, .modal-success {
+  position: fixed;
+  top: 10%;
+  left: 0;
+  z-index: 999;
+  background: #f00;
+  font-size: 1.4em;
+  color: #fff;
+  padding: 1rem 2rem;
+  border-radius: 0 0.5rem 0.5rem 0;
+  transition: transform 0.4s;
+  transform: translateX(-100%); }
+  .modal-error.active, .modal-success.active {
+    transform: translateX(0); }
+
+.modal-success {
+  background: #98BA1F; }
 
 .button input, .button button {
   -webkit-appearance: none; }
