--- a/scss/992-style.scss
+++ b/scss/992-style.scss
@@ -4,6 +4,22 @@ html{
 body{
 	background-size: 32rem auto;
 }
+.body-overflow{
+	overflow: hidden;
+}
+body.body-overflow{
+	&:before{
+		content: '';
+		width: 100%;
+		height: 100%;
+		display: block;
+		background: rgba(37, 98, 165, 0.79);
+		position: fixed;
+		top: 0;
+		left: 0;
+		z-index: 9;
+	}
+}
 .h2, h2{
 	font-size: 3em;
 }
@@ -14,10 +30,33 @@ header{
 	padding: 1.6rem 0 1.1rem;
 	.mobile-menu{
 		display: flex;
+		z-index: 991;
 	}
 }
 nav{
-	display: none;
+	display: block;
+	position: fixed;
+	background: #2562A5;
+	color: #fff;
+	top: 0;
+	right: 0;
+	width: 27rem;
+	height: 100%;
+	padding: 9rem 3rem;
+	z-index: 99;
+	overflow-y: auto;
+	transform: translateX(100%);
+	transition: transform 0.3s;
+	&.active{
+		transform: translateX(0);
+	}
+	ul{
+		display: block;
+		li{
+			margin: 0;
+			margin-bottom: 2rem;
+		}
+	}
 }
 .h1, h1{
 	font-size: 2.5em;
