--- a/scss/main.scss
+++ b/scss/main.scss
@@ -477,6 +477,10 @@ body{
 		border-top: none;
 		margin-top: -1px;
 		overflow: hidden;
+		max-width: 35.5rem;
+		max-height: 36rem;
+		overflow-y: auto;
+		overflow-x: hidden;
 		li{
 			&:last-child{
 				margin-bottom: -1px;
@@ -846,6 +850,12 @@ body{
 				margin-left: 1.1rem;
 			}
 		}
+	}
+	.error-div{
+		width: 100%;
+		text-align: center;
+		color: #f00;
+		font-size: 2.5em;
 	}
 }
 .reiting-block{
